src-ken&y/objects/Customer_Invoice__c.object
<CustomObject>
    <customHelpPage>HelpCustomerInvoice</customHelpPage>
    <description>Customer invoices</description>
    <fields>
        <fullName>Accounting_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Accounting Default.</description>
        <inlineHelpText>Segments allow you to generate detailed financial reports; the default Kenandy segments are &quot;Company&quot; and &quot;GL&quot;.</inlineHelpText>
        <label>Accounting Segment</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowances__c</fullName>
        <inlineHelpText>Sum of Allowance Applied records applied to this invoice</inlineHelpText>
        <label>Allowances</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Applied__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount Applied to this invoice</description>
        <label>Amount Applied</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount paid so far against this invoice</description>
        <label>Amount Paid</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Past_Due__c</fullName>
        <description>Amount of the Balance Due when the Payment Due date is past</description>
        <formula>if( Balance__c &lt; 0, 0,

if(Due_Date__c &gt; TODAY(), 0, Balance__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_To_Apply__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Calculated field for Amount to apply to the invoice.( Do not use this field on the layout this field is used only for the calculations and populate on the Visualforce page CustomerPaymentPage)</description>
        <label>Amount To Apply</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apply_to_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Invoice that the Credit Memo is applied to</description>
        <label>Apply to Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Invoice__c.Bill_To_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Bill_To_Customer__c</valueField>
            </filterItems>
            <filterItems>
                <field>Customer_Invoice__c.Invoice_Type__c</field>
                <operation>notEqual</operation>
                <value>Credit Memo</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Invoice__c</referenceTo>
        <relationshipLabel>Customer Credit Memos</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>IF(OR( ISPICKVAL( Status__c , &quot;Cancelled&quot;),  ISPICKVAL( Status__c , &quot;Void&quot;)), 0, Total_Amount__c
+
Credit_Applied__c
-
Debit_Applied__c
-
(Amount_Paid__c + Deduction_Amount__c + Write_Off_Amount__c + Discount_Taken__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Job_ID__c</fullName>
        <label>Batch Job ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bill To Customer</description>
        <label>Bill To Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer__c</valueField>
            </filterItems>
            <filterItems>
                <field>Customer__c.Top_Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customer Invoices (Bill To Customer)</relationshipLabel>
        <relationshipName>Bill_To_Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_to_City__c</fullName>
        <description>Bill To City</description>
        <label>Bill to City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Country__c</fullName>
        <description>Bill to Country</description>
        <label>Bill to Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_State__c</fullName>
        <description>Bill to State</description>
        <label>Bill to State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Street__c</fullName>
        <description>Bill to Street</description>
        <label>Bill to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_to_Zip_Code__c</fullName>
        <description>Bill to Zip Code</description>
        <label>Bill to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT ADD TO LAYOUT - this field tracks when new payments have been applied to a customer invoice</description>
        <label>Changed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Claim.</description>
        <label>Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Ship_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Applied__c</fullName>
        <label>Credit Applied</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credited_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Credited Invoice for this Rebilled Invoice</description>
        <label>Credited Invoice</label>
        <referenceTo>Customer_Invoice__c</referenceTo>
        <relationshipLabel>Customer Invoices (Rebill Invoices)</relationshipLabel>
        <relationshipName>Rebill_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this entire invoice has been credited.</description>
        <label>Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Hierarchy</label>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Customer Invoices (Customer Hierarchy)</relationshipLabel>
        <relationshipName>Customer_Invoices_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Purchase_Order__c</fullName>
        <description>Customer PO Number</description>
        <formula>Sales_Order__r.Customer_Purchase_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Purchase Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this will let us know which receipt line created this invoice.</description>
        <label>Customer Receipt Line</label>
        <referenceTo>Customer_Receipt_Line__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Receipt_Number__c</fullName>
        <description>Receipt number of shipper verification</description>
        <label>Customer Receipt Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to all payments received against this invoice</description>
        <label>Customer Receipt</label>
        <referenceTo>Customer_Receipt__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer</description>
        <label>Corporate Parent Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Corporate Parent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTPForecastDate__c</fullName>
        <label>DTPForecastDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Invoiced__c</fullName>
        <description>Date of invoice</description>
        <label>Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Paid__c</fullName>
        <description>Date Paid field is deprecated and this field is being used.</description>
        <label>Date Paid</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Due__c</fullName>
        <description>Days from Today that Payment is Due, zero after due date</description>
        <formula>If(Due_Date__c &gt; TODAY(), Due_Date__c - TODAY(), 0)</formula>
        <inlineHelpText>Number of days from today until payment is due.</inlineHelpText>
        <label>Days Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <description>How many days late was this invoice paid in ?</description>
        <formula>if ( Due_Date__c &gt; TODAY() , 0 , 
BLANKVALUE(DATEVALUE(Date_Time_Paid__c),TODAY()) - Due_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between due date and date on which the invoice was paid.</inlineHelpText>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Pay_30__c</fullName>
        <formula>if( AND( NOT( ISBLANK(Date_Time_Paid__c)) , DATEVALUE(Date_Time_Paid__c) &gt; Today()-30),
 DATEVALUE(Date_Time_Paid__c) - DATEVALUE(Date_Invoiced__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between the invoice date and date on which the invoice was paid.</inlineHelpText>
        <label>Days to Pay 30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Pay_90__c</fullName>
        <formula>if( AND( NOT( ISBLANK(DATEVALUE(Date_Time_Paid__c))) , DATEVALUE(Date_Time_Paid__c) &gt; TODAY()-90),
 DATEVALUE(Date_Time_Paid__c) - DATEVALUE(Date_Invoiced__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Pay 90</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Pay__c</fullName>
        <description>How many days occurred between invoice date and paid date</description>
        <formula>Date_Time_Paid__c - Date_Invoiced__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between the invoice date and date on which the invoice was paid.</inlineHelpText>
        <label>Days to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit_Applied__c</fullName>
        <label>Debit Applied</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deduction_Amount__c</fullName>
        <description>Amount deducted via the cash application process</description>
        <label>Deduction Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Discount Amount Available for this Invoice, calculated field. Do not display on page layout. To be used on visualforce page CustomerPaymentPage</description>
        <label>DEPRECATED</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Taken__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of discount (earned or unearned) taken for this order</description>
        <label>Discount Taken</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Payment_Discount_Amount__c</fullName>
        <description>Discount you can take if company has early payment discount terms; discount is off total invoice including taxes.</description>
        <formula>ROUND(Payments_Discount_Amount__c +  Other_Discount_Amount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discount you can take if company has early payment discount terms; discount is off total invoice including taxes.</inlineHelpText>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Early_Payment_Discount_Date__c</fullName>
        <description>Date by which you must make payment to take advantage of early payment discount (if any)</description>
        <formula>Payment_Term__r.Discount_Days__c   +  DATEVALUE(Date_Invoiced__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date by which you must make payment to take advantage of early payment discount (if any).</inlineHelpText>
        <label>Discount Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earned_Discount_Amount__c</fullName>
        <label>DEPRECATED</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exception_Details__c</fullName>
        <description>details of the exception</description>
        <label>Exception Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags orders that need to be reviewed</description>
        <inlineHelpText>If selected, the order needs to be reviewed before it can be processed.</inlineHelpText>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <description>Stores the number of currently unresolved exceptions on this record.</description>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <description>Finalized Date is the date when the document is finalized.</description>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once the invoice is finalized the record is eligible to generate accounting entries.</description>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT PUT on page layout, it is hidden field to control user click.</description>
        <label>Finalized Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Bucket__c</fullName>
        <formula>IF( DTPForecastDate__c &lt; TODAY()-6, &apos;Prior&apos;,
IF( DTPForecastDate__c &gt; TODAY() + 26, &apos;Later&apos;, 
TEXT(DTPForecastDate__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <formula>Bill_To_Customer__r.Top_Parent_Customer__r.Average_Days_To_Pay_30__c +DATEVALUE( Date_Invoiced__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Freeze_Due_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Any new date explicitly entered into Due Date field while Freeze Due Date is checked, will not be updated even if invoice date or payment terms are updated.</description>
        <label>Freeze Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <description>Indicates if the record has exceptions that need to be resolved.</description>
        <formula>OR(
   Exceptions_Count__c &gt; 0,
   Line_Exceptions__c &gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Exceptions must be resolved before the Customer Invoice can proceed.</inlineHelpText>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <description>Select the invoice type</description>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Overpayment</fullName>
                </value>
                <value>
                    <fullName>Prepayment</fullName>
                </value>
                <value>
                    <fullName>Ship Invoice</fullName>
                </value>
                <value>
                    <fullName>Allowance Accrual</fullName>
                </value>
                <value>
                    <fullName>RMA-Credit</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Exceptions__c</fullName>
        <description>Lines on this sales order that indicate exceptions</description>
        <label>Line Exceptions</label>
        <summaryFilterItems>
            <field>Customer_Invoice_Line__c.Has_Exceptions__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Customer_Invoice_Line__c.Customer_Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Matches_To_Grouping_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matches To Grouping Rule</label>
        <referenceTo>Invoice_Grouping_Rule__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <description>Reason or details about the Credit Memo</description>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Discount_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field replaces a deprecated field of the same label. Old API name: Payment_Terms__c; Old label: Payment Terms
Payment terms as entered into the sales order or copied over from parent customer depending on Invoice type</description>
        <label>Payment Terms</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payments_Discount_Amount__c</fullName>
        <formula>IF( Early_Payment_Discount_Date__c &lt; TODAY(), 
        0, 
        Payment_Term__r.Discount_Percent__c * (Subtotal__c - Allowances__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_Paid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Period that the Date Paid falls into</description>
        <label>Period Paid</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Customer Invoices (Period Paid)</relationshipLabel>
        <relationshipName>Customer_Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Invoice_Date__c</fullName>
        <label>Planned Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Hierarchy</label>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Code is needed while writing off Invoices</inlineHelpText>
        <label>Resolution Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The code entered must be a resolution code.</errorMessage>
            <filterItems>
                <field>Reason_Code__c.Type__c</field>
                <operation>equals</operation>
                <value>Resolution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If you want to ship an entire sales order in this shipment, you must enter a sales order; you can override this in each shipment line.</description>
        <inlineHelpText>If you want to ship an entire sales order in this shipment, you must enter a sales order; you can override this in each shipment line.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SelectCheckBox to be used on VisualForce Page do not add on Page Layout</description>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <description>The date is the same as Date Shipped on Shipment</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Add Ship From address for Avalara Tax Calculation</description>
        <inlineHelpText>Ship From address for Avalara Tax Calculation</inlineHelpText>
        <label>Ship From Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Customer.  Add Ship to  address for Avalara Tax Calculation .KNDY-10889</description>
        <label>Ship To</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customer Invoices (Ship To)</relationshipLabel>
        <relationshipName>Customer_Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_City__c</fullName>
        <label>Ship to City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Country__c</fullName>
        <label>Ship to Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <label>Ship to State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Street__c</fullName>
        <label>Ship to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_to_Zip_Code__c</fullName>
        <label>Ship to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <label>Shipment Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sold To Customer</description>
        <label>Sold To Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sold To</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Bill_To_Customer__c</valueField>
            </filterItems>
            <filterItems>
                <field>Customer__c.Top_Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customer Invoices (Sold To Customer)</relationshipLabel>
        <relationshipName>Sold_To_Customer_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_to_City__c</fullName>
        <description>Sold to City</description>
        <label>Sold to City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Country__c</fullName>
        <description>Sold to Country</description>
        <label>Sold to Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_State__c</fullName>
        <description>Sold to State</description>
        <label>Sold to State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Street__c</fullName>
        <description>Sold to Street</description>
        <label>Sold to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sold_to_Zip_Code__c</fullName>
        <description>Sold to Zip Code</description>
        <label>Sold to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Source Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this shipment - Open, Shipped, Invoiced, Closed</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount of all lines ( Sum(Extended_Price__c) for all invoice detail lines for the invoice)</description>
        <inlineHelpText>Total amount of all lines.</inlineHelpText>
        <label>Subtotal</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>(Total_Sales_Tax__c + Total_Line_Amount__c +  Total_Value_Added_Tax__c) + Allowances__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoice total including taxes and freight or other add-on charges: Sales Tax + Total Line Amount = Total Amount.</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Line_Amount__c</fullName>
        <label>Total Line Amount</label>
        <summarizedField>Customer_Invoice_Line__c.Extended_Price__c</summarizedField>
        <summaryForeignKey>Customer_Invoice_Line__c.Customer_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>